# arm_app

./: README.md
arm_app/: CMakeLists.txt  Makefile  Readme.md  build.sh
arm_app/include/: callback.h  fileoperation.h  libfunc.h  libfuncso.h  list.h  log_level.h  main.h  moduleA.h  moduleB.h  queue.h  queue_func.h
arm_app/release/: arm_app  arm_app.sh  stu_list.txt
arm_app/src/: callback.c  fileoperation.c  list.c  main.c  moduleA.c  moduleB.c  queue.c  queuefunc.c
lib_app/: Readme.md
lib_app/liba_app/: Makefile  libfunc.c  libfunc.h
lib_app/libso_app/: Makefile  libfuncso.c  libfuncso.h
lib_app/sqlite-amalgamation-3400100/: Makefile
